samples/_failures_safe/1761002161_cd524d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ebd100d.c: In function ‘main’:
./samples/SAFE/__tmp_9ebd100d.c:160:13: error: expected expression at end of input
  160 |             if (result.rows >
      |             ^~
./samples/SAFE/__tmp_9ebd100d.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ebd100d.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ebd100d.c:160:13: error: expected declaration or statement at end of input
